# median_cut

./: CHANGELOG.md  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  proguard-rules.pro  settings.gradle
android/cpp/: algo.cpp  algo.h  median_cut.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/bavagnoli/median_cut/: MedianCutPlugin.java
example/: README.md  pubspec.yaml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
example/web/: index.html  manifest.json
ios/: median_cut.podspec
ios/Classes/: MedianCutPlugin.h  MedianCutPlugin.m  SwiftMedianCutPlugin.swift
lib/: median_cut.dart  median_cut_web.dart
linux/: CMakeLists.txt  median_cut_plugin.cc
linux/include/median_cut/: median_cut_plugin.h
test/: median_cut_test.dart
